--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -515,6 +515,12 @@ config SPI_VCOREIII_MK1
 	help
 	  SPI driver for VCore-III.
 
+config SPI_JAGUAR2
+       tristate "Jaguar2 SPI controller"
+       depends on SPI_MASTER && VTSS_VCOREIII_JAGUAR2
+       help
+         SPI driver for Jaguar2.
+
 config SPI_XILINX
 	tristate "Xilinx SPI controller common module"
 	depends on HAS_IOMEM
