--- a/drivers/spi/Makefile
+++ b/drivers/spi/Makefile
@@ -78,5 +78,6 @@ obj-$(CONFIG_SPI_TLE62X0)		+= spi-tle62x0.o
 obj-$(CONFIG_SPI_TOPCLIFF_PCH)		+= spi-topcliff-pch.o
 obj-$(CONFIG_SPI_TXX9)			+= spi-txx9.o
 obj-$(CONFIG_SPI_VCOREIII_MK1)		+= spi_vcoreiii.o
+obj-$(CONFIG_SPI_JAGUAR2)               += spi_jaguar2.o spi_jaguar2_mmio.o
 obj-$(CONFIG_SPI_XCOMM)		+= spi-xcomm.o
 obj-$(CONFIG_SPI_XILINX)		+= spi-xilinx.o
