MSCC: Add support for Winbond SPI NAND

--- a/drivers/staging/mt29f_spinand/Makefile
+++ b/drivers/staging/mt29f_spinand/Makefile
@@ -1,1 +1,3 @@
-obj-$(CONFIG_MTD_SPINAND_MT29F) += mt29f_spinand.o
+obj-$(CONFIG_MTD_SPINAND_MT29F) += mt29fspinand.o
+
+mt29fspinand-objs := mt29f_spinand.o wb_spinand.o
