Added the '-Wmaybe-uninitialized' flag to the FDMA driver.

--- a/drivers/net/ethernet/vitesse/Makefile
+++ b/drivers/net/ethernet/vitesse/Makefile
@@ -24,6 +24,8 @@
 #
 
 ccflags-$(CONFIG_VC3FDMA) := -Idrivers/net/ethernet/vitesse/ufdma/include
+#ccflags-$(CONFIG_VC3FDMA) += -Wextra -Wunused -Wno-unused-parameter
+ccflags-$(CONFIG_VC3FDMA) += -Wmaybe-uninitialized
 
 obj-$(CONFIG_VC3FDMA) += vtss_vc3fdma.o
 
