Added the '-Werror' flag to the FDMA driver in order to make the build fail.

--- a/drivers/net/ethernet/vitesse/Makefile
+++ b/drivers/net/ethernet/vitesse/Makefile
@@ -24,6 +24,7 @@
 #
 
 ccflags-$(CONFIG_VC3FDMA) := -Idrivers/net/ethernet/vitesse/ufdma/include
+ccflags-$(CONFIG_VC3FDMA) += -Werror
 #ccflags-$(CONFIG_VC3FDMA) += -Wextra -Wunused -Wno-unused-parameter
 ccflags-$(CONFIG_VC3FDMA) += -Wmaybe-uninitialized
 
